--- a/src/scss/components/offcanvas.scss
+++ b/src/scss/components/offcanvas.scss
@@ -1,6 +1,6 @@
 @layer components {
   .offcanvas {
-    @apply absolute z-50 bg-white w-full max-w-md min-h-screen top-0 transform transition duration-300;
+    @apply absolute z-50 bg-white w-full max-w-md min-h-screen top-0 transform transition duration-300 invisible;
 
     &-start {
       @apply left-0 -translate-x-full;
@@ -11,7 +11,7 @@
     }
 
     &.show {
-      @apply translate-x-0;
+      @apply translate-x-0 visible;
     }
 
     &-backdrop {
